fix z-index film-dropdoun

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,4 +1,6 @@
 .card {
+    position: relative;
+    z-index: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
