--- a/src/components/card/dropdown/FilmsDropdownStyle.css
+++ b/src/components/card/dropdown/FilmsDropdownStyle.css
@@ -4,6 +4,7 @@
     top: 2%;
     width: 50%;
     height: 15%;
+    z-index: 0;
 }
 
 .dropdown__button {
@@ -11,10 +12,10 @@
     right: 0;
     border-radius: 30px;
     background-color: #232323;
-    width: 13%;
-    height: 28%;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
-
+z-index: 2;
 }
 
 .dropdown__button img {
