--- a/src/components/modal-button/ActionListStyle.css
+++ b/src/components/modal-button/ActionListStyle.css
@@ -7,6 +7,7 @@
     height: 100%;
     background-color: #424242;
     border-radius: 10px;
+    z-index: 4;
 }
 
 .action-list__button {
